fixed contact alignment for mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -387,7 +387,7 @@ h1 {
     .contact {
         display: flex;
         flex-direction: column;    
-        padding-left: 30px;
+        padding-left: 35px;
         padding-right: 10px;
         padding-top: 20px;
     }
